# cloudly

./: .readthedocs.yaml  CHANGELOG.md  README.rst  build  pyproject.toml  run
.githooks/: pre-commit
docs/: azure.rst  biglist.rst  conf.py  gcp.rst  index.rst  upathlib.rst
docs/azure/: index.rst  storage.rst
docs/biglist/: biglist.rst  external_biglist.rst  index.rst  parquet_biglist.rst  parquet_tools.rst
docs/gcp/: auth.rst  batch.rst  compute.rst  index.rst  logging.rst  scheduler.rst  secretmanager.rst  storage.rst  workflows.rst
docs/upathlib/: index.rst  serializer.rst  upathlib.rst  versioned_uploadable.rst
docs/util/: datetime.rst  docker.rst  index.rst  logging.rst  multiplexer.rst  ratelimit.rst  seq.rst  timer.rst  versioned_uploadable.rst
src/cloudly/: __init__.py
src/cloudly/azure/: storage.py
src/cloudly/biglist/: __init__.py  _base.py  _biglist.py  _external_biglist.py  _parquet_biglist.py  _util.py  parquet.py
src/cloudly/experimental/azure/: storage.py
src/cloudly/experimental/biglist/: __init__.py
src/cloudly/experimental/gcp/: alloydb.py  logging.py
src/cloudly/gcp/: __init__.py  ai_vector_search.py  aiplatform_vector_search.py  auth.py  batch.py  bigquery.py  compute.py  logging.py  scheduler.py  secretmanager.py  storage.py  workflows.py
src/cloudly/sql/: postgres.py
src/cloudly/upathlib/: __init__.py  _blob.py  _local.py  _tests.py  _upath.py  _util.py  serializer.py  versioned_uploadable.py
src/cloudly/util/: __init__.py  _util.py  datetime.py  docker.py  http_client.py  logging.py  multiplexer.py  parquet.py  ratelimit.py  seq.py  serializer.py  timer.py  versioned_uploadable.py
tests/: test_docs.py  test_util_datetime.py  test_util_logging.py
tests/azure/: test_azure_storage.py
tests/benchmarks/: bench_serializers.py
tests/biglist/: test_biglist.py  test_parquet.py
tests/experimental/: test_gcp_ai_vector_search.py  test_gcp_sql_postgres.py
tests/gcp/: test_ai_vector_search.py  test_gcp_ai_vector_search.py  test_gcp_batch.py  test_gcp_bigquery.py  test_gcp_cloudsql_postgres.py  test_gcp_compute.py  test_gcp_secretmanager.py  test_gcp_sql.py  test_gcp_sql_postgres.py  test_gcp_storage.py
tests/upathlib/: test_common.py  test_fake_blob.py  test_local.py  test_serializer.py  test_upath.py  test_versioned_uploadable.py
tests/util/: test_datetime.py  test_logging.py  test_multiplexer.py  test_parquet.py  test_ratelimit.py  test_seq.py  test_serializer.py  test_timer.py  test_util.py  test_versioned_uploadable.py
(+9 files in other folders)
